# OT2-SARS-CoV2

./: .gitignore  README.md  RNA_extraction_TaqPath.py  constants.py  instructions.md  pyproject.toml  qPCR_Prep_TaqPath.py  rna-extraction-test.ipynb  rna_constants.py
documentations/: instructions.md  labware_instruction.md
qPCR_taqpath_multiplex/: qPCR-test.ipynb  qPCR_taqpath_multiplex.py
rna_extraction_magmax/: rna-extraction-test.ipynb  rna_constants.py  rna_extraction_magmax.py
