[tool.poetry]
name = "ot2-sars-cov2"
version = "0.1.0"
description = "Opensource Protocol for COVID-19 Detection using Opensource OT2 Liquid Handler"
authors = ["Rita Chen, Dany Fu"]
license = "Open-MIT"

[tool.poetry.dependencies]
python = "^3.8"
opentrons = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
